--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,101 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+* {
+    font-family: 'Open Sans';
   }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+  body {
+    background: linear-gradient(
+      90deg,
+      rgba(105, 20, 204, 1) 0%,
+      rgba(44, 114, 251, 1) 100%
+    );
   }
-  to {
-    transform: rotate(360deg);
+  .todo-app {
+    display: flex;
+    flex-direction: column;
+    justify-content: start;
+    width: 500px;
+    min-height: 500px;
+    background: white;
+    text-align: center;
+    margin: 128px auto;
+    border-radius: 5px;
   }
-}
+  
+  h1 {
+    margin: 32px 0;
+    font-size: 24px;
+  }
+  
+  .completed {
+    text-decoration: line-through;
+    opacity: 0.4;
+  }
+  
+  .todo-form {
+    margin-bottom: 32px;
+  }
+  
+  .todo-button {
+    padding: 16px;
+    border: none;
+    border-radius: 0 20px 20px 0;
+    cursor: pointer;
+    outline: none;
+    background: linear-gradient(
+      90deg,
+      rgba(105, 20, 204, 1) 0%,
+      rgba(44, 114, 251, 1) 100%
+    );
+    color: #fff;
+    text-transform: capitalize;
+  }
+  
+  .todo-input {
+    padding: 15px 32px 15px 16px;
+    border-radius: 20px 0 0 20px;
+    border: 1px solid #dfe1e5;
+    outline: none;
+    width: 320px;
+    background: transparent;
+  }
+  
+  .todo-input.edit {
+    border: 2px solid #149fff;
+  }
+  
+  .todo-button.edit {
+    background: linear-gradient(
+      90deg,
+      rgba(20, 159, 255, 1) 0%,
+      rgba(17, 122, 255, 1) 100%
+    );
+    padding: 16px 22px;
+  }
+  
+  .todo-container {
+    display: flex;
+    flex-direction: row;
+    position: relative;
+  }
+  
+  ul {
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+  }
+  
+  .todo-row {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+    margin: 4px auto;
+  
+    padding: 16px;
+    border-radius: 20px;
+    width: 80%;
+  }
+  
+  .todo-row input {
+    margin-right: 10px;
+  }
+  
